syntax = "proto3";

option csharp_namespace = "MultidrawingService";

package draw;

message Draw {
    int32 id = 1;
    repeated Path path = 2;
}

message Path {
    float x = 1;
    float y = 2;
}

message SendDrawRequest {
    Draw DrawPath = 1;
}

message SendDrawResponse {
}

message ReceiveDrawRequest {
}

message ReceiveDrawResponse {
    repeated Draw DrawPath = 1;
}

message RemoveDrawRequest {
    int32 id = 1;
}

message RemoveDrawResponse {
}

service DrawGreeter {
    rpc ReceiveDraw (ReceiveDrawRequest) returns (ReceiveDrawResponse);
    rpc RemoveDraw (RemoveDrawRequest) returns (RemoveDrawResponse);
    rpc SendDraw (SendDrawRequest) returns (SendDrawResponse);
}